# ruijie-sslvpn-launcher-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.ps1  ruijie-sslvpn-launcher-rs.toml
assets/: app.rc
scripts/: README-zh.md  install-ruijie-sslvpn-dns-cleaner-task.ps1
scripts/tests/: start-ruijie-sslvpn-launcher.Tests.ps1
src/: lib.rs  main.rs
